# Nan-LivingOS

./: .gitignore  AI_REASONING_ENGINE.md  ARCHITECTURE.md  CHANGELOG.md  README.md  TOURISM_KNOWLEDGE_GRAPH.md  pyproject.toml
frontend/: eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx  types.ts
frontend/app/ai-chat/: layout.tsx  page.tsx
frontend/app/community/: layout.tsx  page.tsx
frontend/app/components/: AppShell.tsx  LivingMap.tsx  LocaleProvider.tsx  ProductShell.tsx  Reveal.tsx  StatusState.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/explorer/: layout.tsx  page.tsx
frontend/app/impact/: page.tsx
frontend/app/journey/: page.tsx
frontend/app/knowledge-graph/: layout.tsx  page.tsx
frontend/app/map/: layout.tsx  page.tsx
frontend/app/settings/: page.tsx
frontend/app/stories/: page.tsx
frontend/app/utils/: api.ts  supabase.ts
frontend/tests/: rendered-html.test.mjs
migrations/: 001_supabase.sql  002_provenance.sql  003_direct_frontend.sql
scripts/: apply_migrations.py  import_nan_knowledge.py
src/nan_memory/: __init__.py  main.py
src/nan_memory/adapters/: __init__.py  ai.py  memory.py  neo4j_graph.py  openai_reasoning.py  postgres.py
src/nan_memory/adapters/http/: __init__.py  dependencies.py  routes.py  schemas.py
src/nan_memory/application/: ports.py  prompts.py  services.py
src/nan_memory/domain/: __init__.py  errors.py  models.py
src/nan_memory/infrastructure/: __init__.py  config.py  container.py  security.py
tests/: test_api.py
