[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "nan-living-memory-api"
version = "1.0.0"
description = "Clean Architecture FastAPI backend for Nan Living Memory"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
  "neo4j>=6.0,<7.0",
  "openai>=2.0,<3.0",
  "asyncpg>=0.30,<1.0",
  "python-dotenv>=1.1,<2.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=1.0,<2.0",
  "ruff>=0.12,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nan_memory"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/nan_memory/adapters/http/*.py" = ["B008"]
